--- a/index.css
+++ b/index.css
@@ -1,24 +1,28 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
-body{
+
+body {
     background-color: rgb(231, 236, 236);
 }
-.headline{
+
+.headline {
     text-align: center;
     display: flex;
-    position: fixed;
-    
+    width: 100%;
+    margin-top: 10px;
+   
 }
-.headline img{
+
+.headline img {
     width: 100px;
     align-items: center;
-    
 }
-.card{
+
+.card {
     width: 90%;
     max-width: 470px;
     background: linear-gradient(135deg, #a36b86, #440982);
@@ -29,13 +33,16 @@ body{
     text-align: center;
     margin-bottom: 40px;
 }
-.search{
-    width: 100px;
+
+.search {
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-top: 20px;
 }
-.search input{
+
+.search input {
     border: 0;
     outline: 0;
     background: #ebfffc;
@@ -47,70 +54,136 @@ body{
     margin-right: 16px;
     font-size: 18px;
 }
-.search button{
+
+.search button {
     border: 0;
     outline: 0;
     background: #e4efef;
     border-radius: 50%;
-    width: 0px;
+    width: 60px;
     height: 60px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.search button img{
+
+.search button img {
     width: 26px;   
 }
-.weather-icon{
-width: 170px;
-margin-top:30px ;
+
+.weather-icon {
+    width: 170px;
+    margin-top: 30px;
 }
-.weather h1{
+
+.weather h1 {
     font-size: 80px;
     font-weight: 500;
 }
-.weather h2{
+
+.weather h2 {
     font-size: 45px;
     font-weight: 400;
     margin-top: -10px;
 }
-.details{
+
+.details {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
     margin-top: 50px;
 }
-.col{
+
+.col {
     display: flex;
     align-items: center;
     text-align: left;
 }
-.col img{
+
+.col img {
     width: 40px;
     margin-right: 10px;
 }
-.humidity, .wind{
+
+.humidity, .wind {
     font-size: 28px;
     margin-top: 6px;
 }
-.weather{
+
+.weather {
     display: none;
 }
-.error{
+
+.error {
     text-align: left;
     margin-left: 10px;
     font-size: 14px;
     margin-top: 10px;
     display: none;
 }
-footer{
+
+footer {
     text-align: center;
     background-color: #440982;
     color: white;
     border-radius: 20px;
     padding: 10px;
-
 }
 
+/* Mobile view adjustments */
+@media (max-width: 768px) {
+    .headline {
+        flex-direction: column;
+        position: static;
+        padding: 20px;
+    }
+
+    .card {
+        width: 100%;
+        margin: 20px 0;
+        padding: 20px;
+    }
+
+    .search {
+        flex-direction: column;
+        align-items: stretch;
+        justify-content: center;
+    }
+
+    .search input {
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    .search button {
+        width: 100%;
+        border-radius: 30px;
+        height: 40px;
+    }
+
+    .weather h1 {
+        font-size: 50px;
+    }
+
+    .weather h2 {
+        font-size: 30px;
+    }
+
+    .details {
+        flex-direction: column;
+        align-items: stretch;
+        text-align: center;
+        margin-top: 30px;
+    }
+
+    .col {
+        justify-content: center;
+        margin-bottom: 20px;
+    }
+}
 
 
 
